gccida/c0/dwarf2out_finish
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_finish/src/dwarf2out.c:12678:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_finish/src/dwarf2out.c:12680:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_VERBOSE ) 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_finish/src/dwarf2out.c:12704:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_VERBOSE ) 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dwarf2out_finish/src/obj/dwarf2out.o] Error 1
